--- a/Tools/traefik/.env
+++ b/Tools/traefik/.env
@@ -1,5 +1,11 @@
 DOMAIN_ADDR="tavakolzadeh.ir"
 SUB="traefik"
 TRA_METRICS="mtr"
-CF_API_EMAIL="mojtavakol1994@gmail.com"
-CF_DNS_API_TOKEN="_pkCpjQjGFBqi2VwF7yvh019AjV1AyLyxXp5mslR"
+CF_API_EMAIL=""
+CF_DNS_API_TOKEN=""
+
+#  web auth information.
+#  how to generate password:
+#  echo hNA6iQxwNcgZse2vZm4iLHhothC77J | htpasswd -s -n -i MeCan
+WEB_AUTH_USER=Mojtaba
+WEB_AUTH_PASS="{SHA}RyyBVKw1Qps/b/s6upvUKhGqfRA="
