Edit: File .env traefik

--- a/Tools/traefik/.env
+++ b/Tools/traefik/.env
@@ -1,5 +1,5 @@
 DOMAIN_ADDR="tavakolzadeh.ir"
 SUB="traefik"
 TRA_METRICS="mtr"
-CF_API_EMAIL="mojtavakol1994@gmail.com"
-CF_DNS_API_TOKEN="_pkCpjQjGFBqi2VwF7yvh019AjV1AyLyxXp5mslR"
+CF_API_EMAIL=""
+CF_DNS_API_TOKEN=""
