Add: Run service minio

--- a/Tools/minio/compose.yaml
+++ b/Tools/minio/compose.yaml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 networks:
   # app_net:
   #   external: true
@@ -14,7 +12,7 @@ volumes:
 
 services:
   minio:
-    image: repo.tavakolzadeh.ir:8082/minio/minio
+    image: quay.io/minio/minio:RELEASE.2023-08-16T20-17-30Z
     command: server --console-address ":9001" /data
     container_name: minio
     hostname: minio
@@ -24,7 +22,7 @@ services:
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
-      MINIO_SERVER_URL: https://${MINIO_SUB2}.${DOMAIN_ADDRESS}
+      MINIO_SERVER_URL: https://${MINIO_SUB2}.${MINIO_SUB1}.${DOMAIN_ADDRESS}
       MINIO_BROWSER_REDIRECT_URL: https://${MINIO_SUB1}.${DOMAIN_ADDRESS}
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
@@ -34,29 +32,30 @@ services:
     networks:
       - web_net
       # - app_net
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=web_net"
+      
+      # Minio
+      - "traefik.http.routers.minio.entrypoints=http"
+      - "traefik.http.routers.minio.rule=Host(`${MINIO_SUB1}.${DOMAIN_ADDRESS}`)"
+      - "traefik.http.routers.minio.middlewares=https-redirect"
+      - "traefik.http.routers.minio-secure.entrypoints=https"
+      - "traefik.http.routers.minio-secure.rule=Host(`${MINIO_SUB1}.${DOMAIN_ADDRESS}`)"
+      - "traefik.http.routers.minio-secure.tls=true"
+      - "traefik.http.routers.minio-secure.tls.options=default"
+      - "traefik.http.routers.minio-secure.tls.certresolver=mycert"
+      - "traefik.http.routers.minio-secure.service=minio"
+      - "traefik.http.services.minio.loadbalancer.server.port=9001"
 
-    ## Config for traefik
-    # labels:
-    #   - "traefik.enable=true"
-    #   - "traefik.docker.network=web_net"
-    #   - "traefik.http.routers.minio.entrypoints=http"
-    #   - "traefik.http.routers.minio.rule=Host(`${MINIO_SUB1}.${DOMAIN_ADDRESS}`)"
-    #   - "traefik.http.routers.minio.middlewares=https-redirect"
-    #   - "traefik.http.middlewares.https-redirect.redirectscheme.scheme=https"
-    #   - "traefik.http.routers.minio-secure.entrypoints=https"
-    #   - "traefik.http.routers.minio-secure.rule=Host(`${MINIO_SUB1}.${DOMAIN_ADDRESS}`)"
-    #   - "traefik.http.routers.minio-secure.tls=true"
-    #   - "traefik.http.routers.minio-secure.tls.options=default"
-    #   - "traefik.http.routers.minio-secure.tls.certresolver=mycert"
-    #   - "traefik.http.routers.minio-secure.service=minio"
-    #   - "traefik.http.services.minio.loadbalancer.server.port=9001"
-    #   - "traefik.http.routers.minio-api.entrypoints=http"
-    #   - "traefik.http.routers.minio-api.rule=Host(`${MINIO_SUB2}.${DOMAIN_ADDRESS}`)"
-    #   - "traefik.http.routers.minio-api.middlewares=https-redirect"
-    #   - "traefik.http.routers.minio-api-secure.entrypoints=https"
-    #   - "traefik.http.routers.minio-api-secure.rule=Host(`${MINIO_SUB2}.${DOMAIN_ADDRESS}`)"
-    #   - "traefik.http.routers.minio-api-secure.tls=true"
-    #   - "traefik.http.routers.minio-api-secure.tls.options=default"
-    #   - "traefik.http.routers.minio-api-secure.tls.certresolver=mycert"
-    #   - "traefik.http.routers.minio-api-secure.service=minio-api"
-    #   - "traefik.http.services.minio-api.loadbalancer.server.port=9000"
+      # API Minio
+      - "traefik.http.routers.minio-api.entrypoints=http"
+      - "traefik.http.routers.minio-api.rule=Host(`${MINIO_SUB2}.${MINIO_SUB1}.${DOMAIN_ADDRESS}`)"
+      - "traefik.http.routers.minio-api.middlewares=https-redirect@docker"
+      - "traefik.http.routers.minio-api-secure.entrypoints=https"
+      - "traefik.http.routers.minio-api-secure.rule=Host(`${MINIO_SUB2}.${MINIO_SUB1}.${DOMAIN_ADDRESS}`)"
+      - "traefik.http.routers.minio-api-secure.tls=true"
+      - "traefik.http.routers.minio-api-secure.tls.options=default"
+      - "traefik.http.routers.minio-api-secure.tls.certresolver=mycert"
+      - "traefik.http.routers.minio-api-secure.service=minio-api"
+      - "traefik.http.services.minio-api.loadbalancer.server.port=9000"
