--- a/Tools/minio/.env
+++ b/Tools/minio/.env
@@ -1,14 +1,14 @@
 # Domain address
 DOMAIN_ADDRESS=tavakolzadeh.ir
 MINIO_SUB1=object
-MINIO_SUB2=api.object
+MINIO_SUB2=api
 
 # restart policy
 RESTART_POLICY=unless-stopped
 
 # Minio user and pass
-MINIO_ROOT_USER=pzkWH99Y2Dhw3bg7K
-MINIO_ROOT_PASSWORD=ihw65AWseZVMBQGRKsMfrUpFLG7igF
+MINIO_ROOT_USER="Xi5wIv8zo"
+MINIO_ROOT_PASSWORD="F5eyC9tOM5BkD7"
 
 # Server Name
-HOSTNAME=minio-server
+HOSTNAME=repo-server
