--- a/Tools/traefik/.env
+++ b/Tools/traefik/.env
@@ -3,9 +3,15 @@ SUB="traefik"
 TRA_METRICS="mtr"
 CF_API_EMAIL=""
 CF_DNS_API_TOKEN=""
+ACME_EMAIL=""
 
 #  web auth information.
 #  how to generate password:
 #  echo hNA6iQxwNcgZse2vZm4iLHhothC77J | htpasswd -s -n -i MeCan
 WEB_AUTH_USER=Mojtaba
 WEB_AUTH_PASS="{SHA}RyyBVKw1Qps/b/s6upvUKhGqfRA="
+
+# Domain address Minio
+DOMAIN_ADDRESS=tavakolzadeh.ir
+MINIO_SUB1=object
+MINIO_SUB2=api
