--- a/Tools/gitlab-runner/config/config.toml
+++ b/Tools/gitlab-runner/config/config.toml
@@ -1,15 +1,31 @@
-concurrent = 1
+concurrent = 3
 check_interval = 0
+connection_max_age = "15m0s"
+shutdown_timeout = 0
+
+[session_server]
+  session_timeout = 1800
 
 [[runners]]
-  name = "iranak"
-  url = "https://gitlab.com"
-  token = "GR1348941x95GuxjpRTMZFn3njVhY"
+  name = "group runner"
+  url = "https://git.tavakolzadeh.ir"
+  id = 1
+  token = "t1_oURsF_FDDtoiGX_3TiCZ"
+  token_obtained_at = 2025-03-08T09:39:29Z
+  token_expires_at = 0001-01-01T00:00:00Z
   executor = "docker"
+  [runners.cache]
+    MaxUploadedArchiveSize = 0
+    [runners.cache.s3]
+    [runners.cache.gcs]
+    [runners.cache.azure]
   [runners.docker]
     tls_verify = false
     image = "alpine"
     privileged = false
+    disable_entrypoint_overwrite = false
+    oom_kill_disable = false
     disable_cache = false
     volumes = ["/cache"]
-  [runners.cache]
+    shm_size = 0
+    network_mtu = 0
