Edit: remove environmnets

--- a/Tools/traefik/.env
+++ b/Tools/traefik/.env
@@ -1,9 +1,9 @@
 DOMAIN_ADDR="tavakolzadeh.ir"
 SUB="traefik"
 TRA_METRICS="mtr"
-CF_API_EMAIL="mojtavakol1994@gmail.com"
-CF_DNS_API_TOKEN="HOVHKRdRBb4S7RVD63ZSu7GX-Rmd2r6P5B2qZdYw"
-ACME_EMAIL="workmojtavakol1995@gmail.com"
+CF_API_EMAIL=""
+CF_DNS_API_TOKEN=""
+ACME_EMAIL=""
 
 #  web auth information.
 #  how to generate password:
