--- a/Tools/observability/alertmanager/alertmanager.yml
+++ b/Tools/observability/alertmanager/alertmanager.yml
@@ -1,10 +1,10 @@
 global:
   resolve_timeout: 1m
   smtp_smarthost: 'smtp.gmail.com:587'
-  smtp_from: 'workmojtavakol1995@gmail.com'
-  smtp_auth_username: 'workmojtavakol1995@gmail.com'
+  smtp_from: ''
+  smtp_auth_username: ''
   smtp_auth_password: ''
-  smtp_auth_identity: 'workmojtavakol1995@gmail.com'  # ✅ This should match the username
+  smtp_auth_identity: ''
 
 route:
   receiver: 'Production_Environment'
@@ -14,7 +14,7 @@ route:
   group_by: ['instance', 'severity']
 
 receivers:
-  - name: 'Production_Environment'  # ✅ Added missing receiver name
+  - name: 'Production_Environment'
     email_configs:
-      - to: 'mojtavakol1994@gmail.com'
+      - to: ''
         send_resolved: true
