--- a/Tools/nexus/.env
+++ b/Tools/nexus/.env
@@ -5,6 +5,7 @@ HUB_SUB_DOMAIN=hub
 K8S_SUB_DOMAIN=k8s
 QUAY_SUB_DOMAIN=quay
 REGISTRY_SUB_DOMAIN=registry
+GITHUB_SUB_DOMAIN=ghcr
 
 # Nexus image tag
 NEXUS_IMAGE_TAG=latest
