Edit: log_download , bootstrap.sh vagrant , increase memory vms

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 Tools/gitlab-runner/config/.runner_system_id
 /home/mojtaba/workspace/DevOps/Config/vagrant/.vagrant
+/home/mojtaba/workspace/DevOps/Config/kubespray/venv
