--- a/Config/kubespray/roles/download/tasks/download_file.yml
+++ b/Config/kubespray/roles/download/tasks/download_file.yml
@@ -78,7 +78,7 @@
     retries: "{{ download_retries }}"
     delay: "{{ retry_stagger | default(5) }}"
     environment: "{{ proxy_env }}"
-    no_log: "{{ not (unsafe_show_logs | bool) }}"
+    # no_log: "{{ not (unsafe_show_logs | bool) }}"
 
   - name: Download_file | Copy file back to ansible host file cache
     ansible.posix.synchronize:
