Edit: Up & Running cluster kubernetes

--- a/Config/ansible/inventory.ini
+++ b/Config/ansible/inventory.ini
@@ -1,9 +1,8 @@
 # Hosts with dynamic variables
-master-node1 ansible_host=192.168.1.100 ansible_user=vagrant ansible_port=22
-worker-node1 ansible_host=192.168.1.101 ansible_user=vagrant ansible_port=22
-worker-node2 ansible_host=192.168.1.102 ansible_user=vagrant ansible_port=22
-
-# Group with multiple hosts
+master-node1 ansible_host=192.168.56.10
+worker-node1 ansible_host=192.168.56.15
+worker-node2 ansible_host=192.168.56.16
+# Group with multiple host
 [servers]
 master-node1
 worker-node1
