--- a/Tools/traefik/.env
+++ b/Tools/traefik/.env
@@ -7,7 +7,7 @@ ACME_EMAIL=""
 
 #  web auth information.
 #  how to generate password:
-#  echo hNA6iQxwNcgZse2vZm4iLHhothC77J | htpasswd -s -n -i MeCan
+#  echo hNA6iQxwNcgZse2vZm4iLHhothC77J | htpasswd -s -n -i Mojtaba
 WEB_AUTH_USER=Mojtaba
 WEB_AUTH_PASS="{SHA}RyyBVKw1Qps/b/s6upvUKhGqfRA="
 
