--- a/Config/vagrant/Vagrantfile
+++ b/Config/vagrant/Vagrantfile
@@ -11,7 +11,8 @@ Vagrant.configure("2") do |config|
   # Define the first Debian VM
   config.vm.define "master-node1" do |debian1|
     debian1.vm.box = IMAGE_Debian_12
-    debian1.vm.network "public_network", bridge: "wlp0s20f3", ip: "192.168.1.100"
+    debian1.vm.network "private_network", ip: "192.168.56.10"
+    # debian1.ssh.host = "192.168.56.10"
     debian1.vm.hostname = "master-node1"
     debian1.vm.provider "virtualbox" do |vb|
       vb.name = "master-node1"
@@ -24,7 +25,8 @@ Vagrant.configure("2") do |config|
   # Define the second Debian VM
   config.vm.define "worker-node1" do |debian2|
     debian2.vm.box = IMAGE_Debian_12
-    debian2.vm.network "public_network", bridge: "wlp0s20f3", ip: "192.168.1.101"
+    debian2.vm.network "private_network", ip: "192.168.56.15"
+    # debian2.ssh.host = "192.168.56.15"
     debian2.vm.hostname = "worker-node1"
     debian2.vm.provider "virtualbox" do |vb|
       vb.name = "worker-node1"
@@ -37,7 +39,8 @@ Vagrant.configure("2") do |config|
   # Define the third Debian VM
   config.vm.define "worker-node2" do |debian3|
     debian3.vm.box = IMAGE_Debian_12
-    debian3.vm.network "public_network", bridge: "wlp0s20f3", ip: "192.168.1.102"
+    debian3.vm.network "private_network", ip: "192.168.56.16"
+    # debian3.ssh.host = "192.168.56.16"
     debian3.vm.hostname = "worker-node2"
     debian3.vm.provider "virtualbox" do |vb|
       vb.name = "worker-node2"
