--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Tools/gitlab-runner/config/.runner_system_id
 /home/mojtaba/workspace/DevOps/Config/vagrant/.vagrant
 /home/mojtaba/workspace/DevOps/Config/kubespray/venv
+/home/mojtaba/workspace/DevOps/Config/packer/iso
