Add: role install docker , Edit: append tags for roles in file playbook ansible

--- a/Config/ansible/playbook.yml
+++ b/Config/ansible/playbook.yml
@@ -1,5 +1,12 @@
 - hosts: all
   become: true
   roles:
-    - preparing-server
-    - ansible-role-containerd
+    - role: preparing-server-role
+      tags:
+        - preparing
+    - role: containerd-install-role
+      tags:
+        - containerd
+    - role: docker-install-role
+      tags:
+        - docker
