--- a/Config/packer/http/preseed.cfg
+++ b/Config/packer/http/preseed.cfg
@@ -5,7 +5,7 @@
 # d-i netcfg/dhcp_options select Configure network manually
 # d-i netcfg/link_wait_timeout string 10
 # d-i netcfg/disable_autoconfig boolean true
-d-i netcfg/choose_interface select eth0
+# d-i netcfg/choose_interface select eth0
 # d-i netcfg/get_ipaddress string 192.168.56.10
 # d-i netcfg/get_netmask string 255.255.255.0
 # d-i netcfg/get_gateway string 192.168.56.1
