--- a/Config/ansible/inventory.ini
+++ b/Config/ansible/inventory.ini
@@ -2,11 +2,16 @@
 master-node1 ansible_host=192.168.56.10
 worker-node1 ansible_host=192.168.56.15
 worker-node2 ansible_host=192.168.56.16
+loki-node1   ansible_host=192.168.56.10
 # Group with multiple host
 [servers]
 master-node1
 worker-node1
 worker-node2
+loki-node1
+
+[monitoring]
+loki-node1
 
 # Global variables (apply to all hosts)
 [all:vars]
