--- a/Tools/gitlab-runner/config/config.toml
+++ b/Tools/gitlab-runner/config/config.toml
@@ -7,11 +7,11 @@ shutdown_timeout = 0
   session_timeout = 1800
 
 [[runners]]
-  name = "group runner"
+  name = "runner for project devops"
   url = "https://git.tavakolzadeh.ir"
-  id = 1
-  token = "t1_oURsF_FDDtoiGX_3TiCZ"
-  token_obtained_at = 2025-03-08T09:39:29Z
+  id = 3
+  token = "t1_XvC-xfSx4Yjq4S27SnD4"
+  token_obtained_at = 2025-03-27T19:17:27Z
   token_expires_at = 0001-01-01T00:00:00Z
   executor = "docker"
   [runners.cache]
@@ -29,3 +29,33 @@ shutdown_timeout = 0
     volumes = ["/cache"]
     shm_size = 0
     network_mtu = 0
+    network_mode = "web_net"
+    extra_hosts = ["git.tavakolzadeh.ir:172.20.0.2","kube-api.tavakolzadeh.ir:192.168.56.10","repo.tavakolzadeh.ir:172.20.0.2"]
+    helper_image = "registry.tavakolzadeh.ir/gitlab-org/gitlab-runner/gitlab-runner-helper:custom"
+
+[[runners]]
+  name = "runner for project tools devops"
+  url = "https://git.tavakolzadeh.ir"
+  id = 4
+  token = "t3_zq5QYd6yy-F5uqxRHcCz"
+  token_obtained_at = 2025-03-27T19:48:11Z
+  token_expires_at = 0001-01-01T00:00:00Z
+  executor = "docker"
+  [runners.cache]
+    MaxUploadedArchiveSize = 0
+    [runners.cache.s3]
+    [runners.cache.gcs]
+    [runners.cache.azure]
+  [runners.docker]
+    tls_verify = false
+    image = "alpine"
+    privileged = false
+    disable_entrypoint_overwrite = false
+    oom_kill_disable = false
+    disable_cache = false
+    volumes = ["/cache"]
+    shm_size = 0
+    network_mtu = 0
+    network_mode = "web_net"
+    extra_hosts = ["git.tavakolzadeh.ir:172.20.0.2","kube-api.tavakolzadeh.ir:192.168.56.10","repo.tavakolzadeh.ir:172.20.0.2"]
+    helper_image = "registry.tavakolzadeh.ir/gitlab-org/gitlab-runner/gitlab-runner-helper:custom"
