--- a/Tools/nexus/.env
+++ b/Tools/nexus/.env
@@ -6,6 +6,7 @@ K8S_SUB_DOMAIN=k8s
 QUAY_SUB_DOMAIN=quay
 REGISTRY_SUB_DOMAIN=registry
 GITHUB_SUB_DOMAIN=ghcr
+PUSH_IMAGE=push-image
 
 # Nexus image tag
 NEXUS_IMAGE_TAG=latest
