--- a/Tools/gitlab-runner/config/config.toml
+++ b/Tools/gitlab-runner/config/config.toml
@@ -1,15 +1,61 @@
-concurrent = 1
+concurrent = 3
 check_interval = 0
+connection_max_age = "15m0s"
+shutdown_timeout = 0
+
+[session_server]
+  session_timeout = 1800
 
 [[runners]]
-  name = "iranak"
-  url = "https://gitlab.com"
-  token = "GR1348941x95GuxjpRTMZFn3njVhY"
+  name = "runner for project devops"
+  url = "https://git.tavakolzadeh.ir"
+  id = 3
+  token = "t1_XvC-xfSx4Yjq4S27SnD4"
+  token_obtained_at = 2025-03-27T19:17:27Z
+  token_expires_at = 0001-01-01T00:00:00Z
   executor = "docker"
+  [runners.cache]
+    MaxUploadedArchiveSize = 0
+    [runners.cache.s3]
+    [runners.cache.gcs]
+    [runners.cache.azure]
   [runners.docker]
     tls_verify = false
     image = "alpine"
     privileged = false
+    disable_entrypoint_overwrite = false
+    oom_kill_disable = false
     disable_cache = false
     volumes = ["/cache"]
+    extra_hosts = ["git.tavakolzadeh.ir:172.20.0.2", "kube-api.tavakolzadeh.ir:192.168.56.10", "repo.tavakolzadeh.ir:172.20.0.2"]
+    network_mode = "web_net"
+    shm_size = 0
+    helper_image = "registry.tavakolzadeh.ir/gitlab-org/gitlab-runner/gitlab-runner-helper:custom"
+    network_mtu = 0
+
+[[runners]]
+  name = "runner for project tools devops"
+  url = "https://git.tavakolzadeh.ir"
+  id = 4
+  token = "t3_zq5QYd6yy-F5uqxRHcCz"
+  token_obtained_at = 2025-03-27T19:48:11Z
+  token_expires_at = 0001-01-01T00:00:00Z
+  executor = "docker"
   [runners.cache]
+    MaxUploadedArchiveSize = 0
+    [runners.cache.s3]
+    [runners.cache.gcs]
+    [runners.cache.azure]
+  [runners.docker]
+    tls_verify = false
+    image = "alpine"
+    privileged = false
+    disable_entrypoint_overwrite = false
+    oom_kill_disable = false
+    disable_cache = false
+    volumes = ["/cache"]
+    extra_hosts = ["git.tavakolzadeh.ir:172.20.0.2", "kube-api.tavakolzadeh.ir:192.168.56.10", "repo.tavakolzadeh.ir:172.20.0.2"]
+    network_mode = "web_net"
+    shm_size = 0
+    helper_image = "registry.tavakolzadeh.ir/gitlab-org/gitlab-runner/gitlab-runner-helper:custom"
+    network_mtu = 0
