--- a/Config/kubespray/inventory/iranak/group_vars/all/all.yml
+++ b/Config/kubespray/inventory/iranak/group_vars/all/all.yml
@@ -17,9 +17,9 @@ apiserver_loadbalancer_domain_name: "kube-api.tavakolzadeh.ir"
 #   port: 6443
 
 ## Internal loadbalancers for apiservers
-loadbalancer_apiserver_localhost: true
+# loadbalancer_apiserver_localhost: false
 # valid options are "nginx" or "haproxy"
-loadbalancer_apiserver_type: nginx  # valid values "nginx" or "haproxy"
+# loadbalancer_apiserver_type: nginx  # valid values "nginx" or "haproxy"
 
 ## Local loadbalancer should use this port
 ## And must be set port 6443
