--- a/Tools/traefik/.env
+++ b/Tools/traefik/.env
@@ -1,9 +1,9 @@
 DOMAIN_ADDR="tavakolzadeh.ir"
 SUB="traefik"
 TRA_METRICS="mtr"
-CF_API_EMAIL=""
-CF_DNS_API_TOKEN=""
-ACME_EMAIL=""
+CF_API_EMAIL="mojtavakol1994@gmail.com"
+CF_DNS_API_TOKEN="3eJFc31RiEp6NgbpCddH5gYCbCHPABrZqfM8yPxY"
+ACME_EMAIL="workmojtavakol1995@gmail.com"
 
 #  web auth information.
 #  how to generate password:
