--- a/Config/kubespray/inventory/iranak/group_vars/all/all.yml
+++ b/Config/kubespray/inventory/iranak/group_vars/all/all.yml
@@ -36,9 +36,9 @@ loadbalancer_apiserver_healthcheck_port: 8081
 # disable_host_nameservers: false
 
 ## Upstream dns servers
-# upstream_dns_servers:
-#   - 8.8.8.8
-#   - 8.8.4.4
+upstream_dns_servers:
+  - 192.168.1.4 # Address local dns server
+  # - 8.8.4.4
 
 ## There are some changes specific to the cloud providers
 ## for instance we need to encapsulate packets with some network plugins
@@ -58,7 +58,7 @@ loadbalancer_apiserver_healthcheck_port: 8081
 # https_proxy_cert_file: ""
 
 ## Refer to roles/kubespray-defaults/defaults/main/main.yml before modifying no_proxy
-# no_proxy: "*.tavakolzadeh.ir"
+# no_proxy: "repo.tavakolzadeh.ir"
 
 ## Some problems may occur when downloading files over https proxy due to ansible bug
 ## https://github.com/ansible/ansible/issues/32750. Set this variable to False to disable
@@ -66,13 +66,13 @@ loadbalancer_apiserver_healthcheck_port: 8081
 # download_validate_certs: False
 
 ## If you need exclude all cluster nodes from proxy and other resources, add other resources here.
-# additional_no_proxy: ""
+# additional_no_proxy: "registry.tavakolzadeh.ir, git.tavakolzadeh.ir, kube-api.tavakolzadeh.ir"
 
 ## If you need to disable proxying of os package repositories but are still behind an http_proxy set
 ## skip_http_proxy_on_os_packages to true
 ## This will cause kubespray not to set proxy environment in /etc/yum.conf for centos and in /etc/apt/apt.conf for debian/ubuntu
 ## Special information for debian/ubuntu - you have to set the no_proxy variable, then apt package will install from your source of wish
-# skip_http_proxy_on_os_packages: false
+skip_http_proxy_on_os_packages: true
 
 ## Since workers are included in the no_proxy variable by default, docker engine will be restarted on all nodes (all
 ## pods will restart) when adding or removing workers.  To override this behaviour by only including control plane nodes
